<resources>
    <string name="app_name">Tech World Clicker</string>
    <string name="app_id">145996210883</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="company">Company: %s</string>
    <string name="currency">Currency: %s</string>
    <string name="currency_per_sec">$/second: %s</string>
    <string name="currency_per_click">$/click: %s</string>
    <string name="company_level">Company Level: %s</string>
    <string name="perk_points">Perk Points: %s</string>
    <string name="play">Play</string>
    <string name="create_new_company">Create New Company</string>
    <string name="join_company">Join an existing Company</string>
    <string name="invite_users">Invite Players to Company</string>
    <string name="leave_company">Leave Company</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>

    <string name="initialize_counter">0</string>

    <string name="intent_extra_unique_id">unique_id</string>
    <string name="intent_extra_company_name">company_name</string>
    <string name="intent_extra_username">username</string>

    <string name="firebase_db_companies">companies</string>
    <string name="firebase_db_currency">currency</string>
    <string name="firebase_db_currency_per_sec">currencyPerSec</string>

    <string name="firebase_db_abilities">abilities</string>
    <string name="firebase_db_is_active">isActive</string>
    <string name="firebase_db_cooldown">cooldown</string>
    <string name="firebase_db_timer">timer</string>

    <string name="firebase_db_level">level</string>
    <string name="firebase_db_xp">xp</string>
    <string name="firebase_db_perks">perks</string>
    <string name="firebase_db_perk_points">perkPoints</string>
    <string name="firebase_db_users">users</string>
    <string name="firebase_db_company">company</string>
    <string name="firebase_db_currency_per_click">currencyPerClick</string>

    <string name="firebase_db_uid_to_username">firebaseUidToUsers</string>

    <string name="banner_ad_unit_id">ca-app-pub-1053526407243665/6900496034</string>
    <string name="banner_ad_app_id">ca-app-pub-1053526407243665~3947029632</string>

    <string name="leaderboards_company_level_id">CgkIw8W18J8EEAIQAw</string>
    <string name="leaderboards_player_level_id">CgkIw8W18J8EEAIQAg</string>
</resources>