<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="crejaud.tech_company_clicker.menu.MenuActivity">

    <TextView
        android:text="@string/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company_name_text" />

    <TextView
        android:text="@string/company_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company_level_text" />

    <TextView
        android:text="@string/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currency_text" />

    <Button
        android:text="@string/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play_button" />

    <Button
        android:text="@string/create_new_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_new_company_button" />

    <Button
        android:text="@string/join_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/join_company_button" />

    <Button
        android:text="@string/invite_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/invite_users_to_company_button" />

    <Button
        android:text="@string/leave_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/leave_company_button" />

    <Button
        android:text="@string/achievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/achievements_button" />

    <Button
        android:text="@string/leaderboards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/leaderboards_button" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
